2000-11-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c:
	    Blocking read waiting was done with busy-loop, and
	    if the connection *stays* in ESTABLISHED state, but
	    never timeouts --> busy spin goes on, and on...

	* scheduler/msgerror.c:
	    Don't try to be clever with cfp->mid field reuse at
	    the slurp()ed instance -- use incoming 'cfpi->mid'.

2000-11-21  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c:
	    Meaningless variable name changes (and some revoked changes
	    which got committed into CVS - and now removed.)

	* transports/libta/fwriteheaders.c, transports/libta/swriteheaders.c:
	    One subtle bug in BDAT buffering mode left in line-ending
	    newline handling --> surprising crashes seen.

	* transports/libta/mimeheaders.c:
	    Reserve a bit more space for coalesced mime-headers
	    (of "totlen" type).

	* transports/smtp/appendlet.c:
	    Outch! Messages without Content-Type: header did SIGSEGV!

	* lib/selfaddrs.c:
	    there is no field called ifr_ifindex, there is: ifr_index
	    -- returned to previous: memset(ptr, 0, size)
	    -- because Linux glibc 2.1+ has ifr_ifindex, solaris has ifr_index
	    (barf...)

2000-11-19  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* man/smtpserver.8, smtpserver/policytest.c:
	    Lowercasify the lookup key for alias item lookups,
	    and fill in the doc/guides/smtp-policy header into
	    the manual page of the smtpserver.

2000-11-17  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/threads.c, scheduler/mailq.c:
	    Some experiments of making the  mailq-v2  mode mailq
	    to show same things as the old version was able with
	    'verbose' mode turned on.

	* **/Makefile.in:
	    Changes on what we refer at LIBDEB= definitions.

	* transports/libta/mimeheaders.c:
	    - Missing initialization of one buffer -> result is
	      memory scrible and utter chaos..